5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1876_1602.log
== TEST (2019-07-03 18:05:39) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array(eval(input()))
print(min(tempo))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:06:28) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array(eval(input()))
print(tempo[min(tempo)])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:45:25) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array(eval(input()))
for i in tempo:
	if tempo[i]=min(tempo)
	print(i)
-- ERROR:
File "XXXX", line 6
    if tempo[i]=min(tempo)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:45:47) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array(eval(input()))
for i in tempo
	if tempo[i]=min(tempo)
	print(i)
-- ERROR:
File "XXXX", line 5
    for i in tempo
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:45:51) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array(eval(input()))
for i in tempo:
	if tempo[i]=min(tempo)
	print(i)
-- ERROR:
File "XXXX", line 6
    if tempo[i]=min(tempo)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:51:03) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array(eval(input()))
k=0
for i in size(tempo):
	while tempo[i]=min(tempo)
	k=k+1
print(k)
-- ERROR:
File "XXXX", line 7
    while tempo[i]=min(tempo)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:52:25) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array(eval(input()))
k=0
for i in size(tempo):
	if (tempo[i]=min(tempo)):
		print(i)
-- ERROR:
File "XXXX", line 7
    if (tempo[i]=min(tempo)):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:52:30) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array(eval(input()))
k=0
for i in size(tempo):
	if (tempo[i]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:52:54) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array(eval(input()))
k=0
for i in tempo:
	if (tempo[i]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:53:45) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array(eval(input()))
k=size(tempo)
for i in k:
	if (tempo[i]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:54:10) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array(eval(input()))
for i in tempo:
	if (tempo[i]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:57:47) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array(eval(input()))
for i in tempo:
	if (tempo[i]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:58:00) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array(eval(input()))
for i in tempo:
	if (tempo[i]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:58:39) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array(eval(input()))
for i in range(tempo):
	if (tempo[i]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:58:40) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array(eval(input()))
for i in range(tempo):
	if (tempo[i]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:59:18) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())),dtype=int)
for i in range(tempo):
	if (tempo[i]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:59:30) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())),dtype=int)
for i in size(tempo):
	if (tempo[i]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:59:44) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in size(tempo):
	if (tempo[i]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:59:53) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in size(tempo):
	if (tempo[i]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:59:53) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in size(tempo):
	if (tempo[i]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:59:53) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in size(tempo):
	if (tempo[i]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:59:53) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in size(tempo):
	if (tempo[i]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:59:53) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in size(tempo):
	if (tempo[i]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:00:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in size(tempo):
	if (tempo[i]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:00:27) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in tempo:
	if (tempo[i]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:00:44) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i-1 in tempo:
	if (tempo[i]==min(tempo)):
		print(i)
-- ERROR:
File "XXXX", line 5
    for i-1 in tempo:
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:00:56) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i-1 in tempo:
	if (tempo[i]==min(tempo)):
		print(i)
-- ERROR:
File "XXXX", line 5
    for i-1 in tempo:
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:01:05) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for (i-1) in tempo:
	if (tempo[i]==min(tempo)):
		print(i)
-- ERROR:
File "XXXX", line 5
    for (i-1) in tempo:
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:01:06) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for (i-1) in tempo:
	if (tempo[i]==min(tempo)):
		print(i)
-- ERROR:
File "XXXX", line 5
    for (i-1) in tempo:
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:01:26) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in size(tempo):
	if (tempo[i]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:01:39) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in range(tempo):
	if (tempo[i]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:02:01) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in tempo:
	if (tempo[i]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:02:17) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in tempo:
	if (tempo[i-1]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:02:25) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in tempo:
	if (tempo[i-1]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:02:50) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in tempo:
	if (tempo[i-1]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:02:59) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in tempo:
	if (tempo[i-1]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:03:18) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in tempo:
	if (tempo[i-1]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:03:27) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in tempo:
	if (tempo[i-1]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:03:55) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in tempo:
	if (tempo[i-1]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:04:02) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in tempo:
	if (tempo[i-1]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:04:08) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in tempo:
	if (tempo[i-1]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:05:05) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in tempo:
	i=i+1
	if (tempo[i-1]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:05:24) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in tempo:
	i=i+1
	if (tempo[i-1]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:05:45) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in tempo:
	if (tempo[i-1]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:05:50) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in tempo:
	if (tempo[i-1]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:06:02) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in tempo:
	if (tempo[i-1]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:07:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in tempo:
	if (tempo[i-1]==min(tempo)):
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:08:06) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in tempo:
	if (tempo[i]==min(tempo)):
		print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:08:34) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in tempo:
	if (tempo[i]==min(tempo)):
		print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:10:52) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in range(tempo-1):
	if (tempo[i]==min(tempo)):
		print()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:11:16) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in range(tempo-1):
	if (tempo[i]==min(tempo)):
		print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:11:18) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in range(tempo-1):
	if (tempo[i]==min(tempo)):
		print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 19:11:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in range(tempo-1):
	if (tempo[i]==min(tempo)):
		print(i)

-- EXECUTION TIME:
0.967134
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1876/1602/main.py", line 5, in <module>
    for i in range(tempo-1):
TypeError: only integer scalar arrays can be converted to a scalar index

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:12:08) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
for i in range(tempo-1):
	if (tempo[i]==min(tempo)):
		print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:14:00) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
k=0
while (tempo[k]!=min(tempo)):
	k=k+1
	print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 19:14:14) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
k=0
while (tempo[k]!=min(tempo)):
	k=k+1
	print(k)
-- EXECUTION TIME:
1.23147
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
1
---- user output:
1
2
3
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
1
---- user output:

-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
0
---- user output:
1
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:14:18) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
k=0
while (tempo[k]!=min(tempo)):
	k=k+1
	print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:14:18) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
k=0
while (tempo[k]!=min(tempo)):
	k=k+1
	print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 19:14:23) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
k=0
while (tempo[k]!=min(tempo)):
	k=k+1
	print(k)
-- EXECUTION TIME:
1.80399
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
1
---- user output:
1
2
3
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
1
---- user output:

-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
0
---- user output:
1
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 19:14:24) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
k=0
while (tempo[k]!=min(tempo)):
	k=k+1
	print(k)
-- EXECUTION TIME:
3.24374
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
1
---- user output:
1
2
3
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
1
---- user output:

-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
0
---- user output:
1
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:14:48) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
k=0
while (tempo[k]!=min(tempo)):
	k=k+1
	print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:14:59) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
k=0
while (tempo[k]!=min(tempo)):
	k=k+1
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 19:15:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
k=0
while (tempo[k]!=min(tempo)):
	k=k+1
print(k)
-- EXECUTION TIME:
1.06515
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
1
---- user output:
3
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
1
---- user output:
0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
0
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:15:23) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
k=0
while (tempo[k]!=min(tempo)):
	k=k+1
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:16:03) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
k=0
while (tempo[k]!=max(tempo)):
	k=k+1
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 19:16:21) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array((eval(input())))
k=0
while (tempo[k]!=max(tempo)):
	k=k+1
print(k)
-- EXECUTION TIME:
1.05914
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
